[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.10", "ninja"]
build-backend = "scikit_build_core.build"

[project]
name = "living-limiter"
version = "0.1.0"
description = "Living Lab: A 1,000,000+ req/s rate limiting engine using C++ atomics."
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Living Lab Team"}]
license = {text = "MIT"}

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
sdist.include = ["src/*", "CMakeLists.txt", "README.md", "LICENSE"]

[tool.scikit-build.cmake]
version = ">=3.20"
# Try Ninja which is more standard for scikit-build-core
args = ["-G", "Ninja"]
